--- a/index.html
+++ b/index.html
@@ -11,29 +11,234 @@
 <body>
     <main>
         <div id="pexeso">
-            <div class="box" id="box1"></div>
-            <div class="box" id="box2"></div>
-            <div class="box" id="box3"></div>
-            <div class="box" id="box4"></div>
-            <div class="box" id="box5"></div>
+            <!-- =============================== FIRST ROW ============================ -->
+            <div class="box" id="box1">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box2">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box3">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box4">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box5">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box6">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
 
-            <div class="box" id="box6"></div>
-            <div class="box" id="box7"></div>
-            <div class="box" id="box8"></div>
-            <div class="box" id="box9"></div>
-            <div class="box" id="box10"></div>
+            <!-- =========================== SECOND ROW =======================-->
+            <div class="box" id="box7">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box8">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box9">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box10">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box11">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box12">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
 
-            <div class="box" id="box11"></div>
-            <div class="box" id="box12"></div>
-            <div class="box" id="box13"></div>
-            <div class="box" id="box14"></div>
-            <div class="box" id="box15"></div>
+            <!-- =====================   THIRD ROW ========================-->
+            <div class="box" id="box13">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box14">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box15">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box16">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box17">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box18">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
 
-            <div class="box" id="box16"></div>
-            <div class="box" id="box17"></div>
-            <div class="box" id="box18"></div>
-            <div class="box" id="box19"></div>
-            <div class="box" id="box20"></div>
+            <!-- =========================== FOURTH ROW ============================== -->
+            <div class="box" id="box19">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box20">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box21">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box22">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box23">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box24">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+
+            <!-- ======================== FIFTH ROW ======================== -->
+            <div class="box" id="box25">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box26">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box27">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box28">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box29">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box30">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            
+            <!-- ============================== SIXTH ROW =========================== -->
+            <div class="box" id="box31">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box32">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box33">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box34">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box35">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+            <div class="box" id="box36">
+                <div class="box-inner">
+                    <div class="box-front"></div>
+                    <div class="box-back"></div>
+                </div>
+            </div>
+
         </div>
     </main>
 </body>
