--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./main.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
     <main>
+
+        <i id="turn" class="bi bi-person-fill"></i>
+
+        <div id="player1">
+            <h1><i class="bi bi-person-fill"></i>Green</h1>
+            <h2 id="player1Score">0</h2>
+        </div>
+        <div id="player2">
+            <h1><i class="bi bi-person-fill"></i>Blue</h1>
+            <h2 id="player2Score">0</h2>
+        </div>
+
+        
+        <div id="overScreen"></div>
         <div id="pexeso">
+            
+
             <!-- =============================== FIRST ROW ============================ -->
             <div class="box" id="box1">
                 <div class="box-inner">
