--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./main.css">
     <script src="./script.js" defer></script>
+    <script src="./snow.js" defer></script>
 </head>
 <body>
     <main>
+        <div id="endPopUp"></div>
+        <i id="restartButton" class="bi bi-arrow-clockwise"></i>
 
         <i id="turn" class="bi bi-person-fill"></i>
 
         <div id="player1">
-            <h1><i class="bi bi-person-fill"></i>Green</h1>
+            <i class="bi bi-person-fill"></i>
             <h2 id="player1Score">0</h2>
         </div>
         <div id="player2">
-            <h1><i class="bi bi-person-fill"></i>Blue</h1>
+            <i class="bi bi-person-fill"></i>
             <h2 id="player2Score">0</h2>
         </div>
 
@@ -30,37 +33,37 @@
 
             <!-- =============================== FIRST ROW ============================ -->
             <div class="box" id="box1">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box2">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box3">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box4">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box5">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box6">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
@@ -68,37 +71,37 @@
 
             <!-- =========================== SECOND ROW =======================-->
             <div class="box" id="box7">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box8">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box9">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box10">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box11">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box12">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
@@ -106,37 +109,37 @@
 
             <!-- =====================   THIRD ROW ========================-->
             <div class="box" id="box13">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box14">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box15">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box16">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box17">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box18">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
@@ -144,37 +147,37 @@
 
             <!-- =========================== FOURTH ROW ============================== -->
             <div class="box" id="box19">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box20">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box21">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box22">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box23">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box24">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
@@ -182,37 +185,37 @@
 
             <!-- ======================== FIFTH ROW ======================== -->
             <div class="box" id="box25">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box26">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box27">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box28">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box29">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box30">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
@@ -220,37 +223,37 @@
             
             <!-- ============================== SIXTH ROW =========================== -->
             <div class="box" id="box31">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box32">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box33">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box34">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box35">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
             </div>
             <div class="box" id="box36">
-                <div class="box-inner">
+                <div class="box-inner">?
                     <div class="box-front"></div>
                     <div class="box-back"></div>
                 </div>
