--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./main.css">
     <script src="./script.js" defer></script>
-    <script src="./snow.js" defer></script>
 </head>
 <body>
     <main>
@@ -261,5 +260,8 @@
 
         </div>
     </main>
+
+    <script src="./snow.js"></script>
+
 </body>
 </html>
